# visit-quang-nam-planner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dioxus.toml  Dockerfile  ISSUES.md  README.md  docker-compose.yml  input.css  justfile  package-lock.json  package.json  rust-toolchain.toml
data/: README.md
docs/: deployment.md  performance-optimization-roadmap.md
plans/: README.md  phase-1-ingest.md  phase-2-retrieval.md  phase-3-llm.md  phase-4-ui.md  phase-5-polish.md  phase-6-ship.md
scripts/: bootstrap.sh  build_corpus.rs  smoke-zen.sh
src/: app.rs  copies.rs  lib.rs  main.rs  util.rs
src/components/: activity_row.rs  day_card.rs  error_box.rs  itinerary_view.rs  mod.rs  planner_form.rs  preference_chip.rs  trip_summary.rs
src/domain/: format.rs  mod.rs
src/ingest/: chunk.rs  embedder.rs  html.rs  mod.rs  wordpress.rs
src/retrieval/: in_memory.rs  mod.rs
src/server/: llm.rs  mod.rs  plan_trip.rs  prompts.rs
tests/: load_corpus.rs  plan_trip.rs
tests/fixtures/: corpus.json  llm_response.json
