[package]
name = "visit-quang-nam-planner"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Brown <jbrown@visitquangnam.com>"]
description = "AI-powered personalized trip planner for Quang Nam, Vietnam"
license = "MIT"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# Server-only deps — kept optional so they're excluded from the wasm client
async-openai = { version = "0.27", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
scraper = { version = "0.20", optional = true }
thiserror = { version = "2", optional = true }

[features]
# Fullstack default: client (web) + server binaries both build from this one crate
default = ["web", "server"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:async-openai",
    "dep:reqwest",
    "dep:tokio",
    "dep:scraper",
    "dep:thiserror",
]