[package]
name = "visit-quang-nam-planner"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Brown <jbrown@visitquangnam.com>"]
description = "AI-powered personalized trip planner for Quang Nam, Vietnam"
license = "MIT"

[lib]
name = "visit_quang_nam_planner"
path = "src/lib.rs"

[[bin]]
name = "build_corpus"
path = "src/bin/build_corpus.rs"
required-features = ["server"]

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
futures = "0.3"
async-trait = { version = "0.1", optional = true }
# wasm-compatible timers for the client-side 8s loading hint and 60s hard cap
# (Phase 5). Non-optional: the client build needs it; `tokio::time` is
# server-only and not in the wasm target.
gloo-timers = { version = "0.3", features = ["futures"] }

# Server-only deps — kept optional so they're excluded from the wasm client
async-openai = { version = "0.27", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"], optional = true }
scraper = { version = "0.20", optional = true }
thiserror = { version = "2", optional = true }
tiktoken-rs = { version = "0.6", optional = true }

[features]
# Fullstack default: client (web) + server binaries both build from this one crate
default = ["web", "server"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:async-openai",
    "dep:reqwest",
    "dep:tokio",
    "dep:scraper",
    "dep:thiserror",
    "dep:tiktoken-rs",
    "dep:async-trait",
]

